RESOLVED FIXED263827
[IFC][Ruby] Inter-character annotation box does not stretch/need re-alignment
https://bugs.webkit.org/show_bug.cgi?id=263827
Summary [IFC][Ruby] Inter-character annotation box does not stretch/need re-alignment
alan
Reported 2023-10-28 09:35:39 PDT
ssia
Attachments
[fast-cq]Patch (4.08 KB, patch)
2023-10-28 09:37 PDT, alan
no flags
alan
Comment 1 2023-10-28 09:37:01 PDT
Created attachment 468380 [details] [fast-cq]Patch
EWS
Comment 2 2023-10-28 11:30:34 PDT
Committed 269891@main (ad56b032a504): <https://commits.webkit.org/269891@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 468380 [details].
Radar WebKit Bug Importer
Comment 3 2023-10-28 11:31:15 PDT
Note You need to log in before you can comment on or make changes to this bug.