[IFC][Ruby] Inter-character annotation box does not stretch/need re-alignment https://bugs.webkit.org/show_bug.cgi?id=263827

Reviewed by Antti Koivisto.

...unlike interlinear annotations.

* Source/WebCore/layout/formattingContexts/inline/ruby/RubyFormattingContext.cpp:
(WebCore::Layout::RubyFormattingContext::sizeAnnotationBox):
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::updateRenderTreePositions):
* Source/WebCore/layout/layouttree/LayoutBoxGeometry.h:
(WebCore::Layout::BoxGeometry::contentBoxSize const):

Canonical link: https://commits.webkit.org/269891@main